tests/baselines/reference/objectLiteralShorthandProperties2.errors.txt
tests/cases/compiler/objectLiteralShorthandProperties2.ts(3,20): error TS1005: ':' expected.
tests/cases/compiler/objectLiteralShorthandProperties2.ts(4,7): error TS1005: ':' expected.
tests/cases/compiler/objectLiteralShorthandProperties2.ts(5,10): error TS1005: '(' expected.
tests/cases/compiler/objectLiteralShorthandProperties2.ts(6,10): error TS1005: '(' expected.
tests/cases/compiler/objectLiteralShorthandProperties2.ts(7,9): error TS1005: ':' expected.
tests/cases/compiler/objectLiteralShorthandProperties2.ts(8,10): error TS1005: ':' expected.
tests/cases/compiler/objectLiteralShorthandProperties2.ts(9,8): error TS1005: ':' expected.
tests/cases/compiler/objectLiteralShorthandProperties2.ts(10,10): error TS1005: ':' expected.
tests/cases/compiler/objectLiteralShorthandProperties2.ts(12,1): error TS1005: ':' expected.
tests/cases/compiler/objectLiteralShorthandProperties2.ts(15,6): error TS1005: ',' expected.
tests/cases/compiler/objectLiteralShorthandProperties2.ts(16,6): error TS1005: ',' expected.
tests/cases/compiler/objectLiteralShorthandProperties2.ts(17,6): error TS1005: '=' expected.
tests/cases/compiler/objectLiteralShorthandProperties2.ts(18,1): error TS1128: Declaration or statement expected.
tests/cases/compiler/objectLiteralShorthandProperties2.ts(5,9): error TS2378: A 'get' accessor must return a value or consist of a single 'throw' statement.
tests/cases/compiler/objectLiteralShorthandProperties2.ts(15,5): error TS2300: Duplicate identifier 'a'.
tests/cases/compiler/objectLiteralShorthandProperties2.ts(15,7): error TS2304: Cannot find name 'b'.
tests/cases/compiler/objectLiteralShorthandProperties2.ts(16,5): error TS2300: Duplicate identifier 'a'.


==== tests/cases/compiler/objectLiteralShorthandProperties2.ts (17 errors) ====
    // errors
    var y = {
        "stringLiteral",
                       ~
!!! error TS1005: ':' expected.
        42,
          ~
!!! error TS1005: ':' expected.
        get e,
             ~
!!! error TS1005: '(' expected.
            ~
!!! error TS2378: A 'get' accessor must return a value or consist of a single 'throw' statement.
        set f,
             ~
!!! error TS1005: '(' expected.
        this,
            ~
!!! error TS1005: ':' expected.
        super,
             ~
!!! error TS1005: ':' expected.
        var,
           ~
!!! error TS1005: ':' expected.
        class,
             ~
!!! error TS1005: ':' expected.
        typeof
    };
    ~
!!! error TS1005: ':' expected.
    
    var x = {
        a.b,
         ~
!!! error TS1005: ',' expected.
        ~
!!! error TS2300: Duplicate identifier 'a'.
          ~
!!! error TS2304: Cannot find name 'b'.
        a["ss"],
         ~
!!! error TS1005: ',' expected.
        ~
!!! error TS2300: Duplicate identifier 'a'.
        a[1],
         ~
!!! error TS1005: '=' expected.
    };
    ~
!!! error TS1128: Declaration or statement expected.